src/App.css
@import "~slick-carousel/slick/slick.css";
@import "~slick-carousel/slick/slick-theme.css";

/* custom-slider for slick dots */
.custom-slider .slick-dots li button:before {
  font-size: 12px;
  color: #ec4899; /* Tailwind pink-500 */
  opacity: 0.5;
}

.custom-slider .slick-dots li.slick-active button:before {
  color: #db2777; /* Tailwind pink-600 */
  opacity: 1;
}

.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.Nav-height{
  height: 100px !important;
}

